--- a/configuration.css
+++ b/configuration.css
@@ -9,9 +9,25 @@ h1 {
 
   h2 {
     color: rgb(60, 80, 179);
-    font-size: 2em;
+    font-size: 1.3em;
     padding-top: 100px;
     width: 100%;
     font-family: Helvetica;
     text-align: center;
+  }
+
+  li {
+    color: rgb(60, 80, 179);
+    font-size: 1em;
+    padding-top: 100px;
+    width: 100%;
+    font-family: Helvetica;
+    text-align: center;
+  }
+
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
   }
