--- a/configuration.css
+++ b/configuration.css
@@ -1,3 +1,7 @@
+body{
+    background-color: black;
+}
+
 h1 {
     color: rgb(15, 53, 240);
     font-size: 2em;
@@ -37,4 +41,5 @@ h1 {
 
   li{
     color: rgb(15, 53, 240);
+    font-family: Helvetica;
   }
